feat: 活动广场&&发布活动 初步页面

--- a/src/pages/playground/index.less
+++ b/src/pages/playground/index.less
@@ -1,4 +1,7 @@
 .main {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   margin-bottom: 10px;
 }
 .content {
@@ -9,6 +12,7 @@
 .left_div {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
 }
 .right_div {
   display: flex;
