--- a/src/pages/Welcome.less
+++ b/src/pages/Welcome.less
@@ -1,5 +1,9 @@
 @import '~antd/lib/style/themes/default.less';
-
+.content {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
 .pre {
   margin: 12px 0;
   padding: 12px 20px;
@@ -11,4 +15,12 @@
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+  justify-content: center;
+  margin: 40px;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
