--- a/src/pages/Welcome.less
+++ b/src/pages/Welcome.less
@@ -1,6 +1,7 @@
 @import '~antd/lib/style/themes/default.less';
 .content {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   width: 100%;
 }
