--- a/src/pages/playground/index.less
+++ b/src/pages/playground/index.less
@@ -1,26 +1,37 @@
-.main {
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.header {
+  display: flex;
+  justify-content: flex-end;
+  width: 85%;
+  margin-bottom: 20px;
+}
+.activity_main {
   display: flex;
   justify-content: center;
   width: 100%;
   margin-bottom: 10px;
 }
-.content {
+.activity_content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.left_div {
+.activity_left_div {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
-.right_div {
+.activity_right_div {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
 
-.like_div {
+.activity_like_div {
   display: flex;
   flex-direction: row;
   margin-bottom: 2px;
