feat: 抽出Activity和Status组件 && 个人中心页面添加Tab

--- a/src/pages/playground/index.less
+++ b/src/pages/playground/index.less
@@ -1,38 +1,17 @@
 .content {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 70%;
 }
 .header {
   display: flex;
   justify-content: flex-end;
-  width: 85%;
   margin-bottom: 20px;
 }
-.activity_main {
+
+.activities_list {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   width: 100%;
-  margin-bottom: 10px;
-}
-.activity_content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.activity_left_div {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-.activity_right_div {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.activity_like_div {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 2px;
 }
