--- a/src/pages/user/center/index.less
+++ b/src/pages/user/center/index.less
@@ -1,9 +1,11 @@
 .content {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  width: 100%;
-  padding: 10vh 0;
-  background-image: url('../../../../public/background.jpg');
+  width: 80%;
+  .main {
+    margin: 20px 0;
+  }
 }
 
 .headerContent {
