--- a/src/pages/user/center/index.less
+++ b/src/pages/user/center/index.less
@@ -1,3 +1,4 @@
+@import '~antd/es/style/themes/default.less';
 .content {
   display: flex;
   flex-direction: column;
@@ -13,12 +14,31 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  .right{
+    flex-direction: column;
   .avatar {
     position: relative;
     top: -50px;
     width: 160px;
     height: 160px;
   }
+  .avatar_title {
+    height: 22px;
+    margin-bottom: 8px;
+    color: @heading-color;
+    font-size: @font-size-base;
+    line-height: 22px;
+  }
+  
+  .button_view {
+    width: 144px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 20px;
+  }
+}
   .briefInfoDiv {
     display: flex;
     flex: 1;
@@ -39,4 +59,6 @@
     justify-content: flex-end;
     padding: 20px;
   }
+
 }
+
