--- a/src/pages/comments/index.less
+++ b/src/pages/comments/index.less
@@ -6,16 +6,30 @@
   width: 100vw;
   height: 90vh;
   .titleBar {
-    position: sticky;
+    display: flex;
+    align-items: center;
+    width: 70vw;
     height: 10vh;
   }
   .main {
+    width: 70vw;
     height: 60vh;
+    margin-bottom: 20px;
+    overflow: auto;
   }
   .bottom {
-    position: fixed;
-    bottom: 10vh;
     width: 70vw;
-    height: 30vh;
+    height: 40vh;
+  }
+}
+
+.commentItem {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 10vh;
+  .userInfoDiv {
+  }
+  .contentDiv {
   }
 }
