--- a/src/components/PageContainer/index.less
+++ b/src/components/PageContainer/index.less
@@ -1,7 +1,9 @@
 .background {
   display: flex;
   justify-content: center;
-  width: 100%;
-  padding: 10vh 0;
-  background-image: url('../../../public/background.jpg');
+  width: 100vw;
+  height: 93vh;
+  padding: 10vh 0 0 0;
+  background-image: url('../../../public/background1.jpg');
+  background-size: cover;
 }
