--- a/src/pages/comments/index.less
+++ b/src/pages/comments/index.less
@@ -10,6 +10,13 @@
     align-items: center;
     width: 70vw;
     height: 10vh;
+    padding: 10px;
+    background: #fff;
+    .title {
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 1.6;
+    }
   }
   .main {
     width: 70vw;
