--- a/src/pages/playground/index.less
+++ b/src/pages/playground/index.less
@@ -12,6 +12,8 @@
 .activities_list {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
+  height: 65vh;
+  overflow: auto;
 }
