--- a/src/pages/comments/index.less
+++ b/src/pages/comments/index.less
@@ -13,6 +13,7 @@
     padding: 10px;
     background: #fff;
     .title {
+      margin-left: 15px;
       font-weight: bold;
       font-size: 18px;
       line-height: 1.6;
