--- a/src/components/PageContainer/index.less
+++ b/src/components/PageContainer/index.less
@@ -4,6 +4,6 @@
   width: 100vw;
   height: 93vh;
   padding: 10vh 0 0 0;
-  background-image: url('../../../public/background1.jpg');
+  background-image: url('../../../public/background.jpg');
   background-size: cover;
 }
