--- a/src/components/PageContainer/index.less
+++ b/src/components/PageContainer/index.less
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100vw;
-  height: 93vh;
+  min-height: 93vh;
   padding: 10vh 0 0 0;
   background-image: url('../../../public/background.jpg');
-  background-size: cover;
 }
