--- a/src/pages/comments/index.less
+++ b/src/pages/comments/index.less
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 100vw;
-  height: 90vh;
+  padding-bottom: 20px;
   .titleBar {
     display: flex;
     align-items: center;
@@ -27,7 +27,6 @@
   }
   .bottom {
     width: 70vw;
-    height: 40vh;
   }
 }
 
@@ -36,8 +35,4 @@
   flex-direction: row;
   width: 100%;
   height: 10vh;
-  .userInfoDiv {
-  }
-  .contentDiv {
-  }
 }
