--- a/src/components/Activity/index.less
+++ b/src/components/Activity/index.less
@@ -13,11 +13,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  width: 90%;
 }
 .activity_right_div {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  width: 20%;
 }
 
 .activity_like_div {
